[package]
name = "example-winit"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum = { path = "../../minimum" }
minimum-winit = { path = "../../contrib/minimum-winit" }
minimum-skulpin = { path = "../../contrib/minimum-skulpin" }
minimum-nphysics2d = { path = "../../contrib/minimum-nphysics2d" }

example-shared = { path = "../example-shared" }

skulpin = { version = "0.11", default-features = false, features = ["skia_complete", "skulpin_winit"] }
skulpin-plugin-imgui = "0.7"

imgui-inspect-derive = "0.6"
imgui-inspect = "0.6"

imgui = "0.5"
imgui-winit-support = "0.5.0"

crossbeam-channel = "0.4"

atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "minimum-0.3" }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }

legion = { version = "0.3", default-features = false, features = ["serialize"] }

glam = { version = "0.8.5", features = ["serde"] }

structopt = "0.3"
serde = "1"
uuid = "0.8"
type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
inventory = "0.1"

# We need this PR (https://github.com/servo/bincode/pull/288) but it's not published yet
bincode = "1.3.1"
mopa = "0.2"
itertools = "0.8"

serde-diff = "0.3"

ron = "0.5"
erased-serde = "0.3"

log="0.4"
env_logger = "0.6"