[package]
name = "tutorial"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum = { path = "../../minimum" }

atelier-assets = { git = "https://github.com/amethyst/atelier-assets" }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum" }

legion = { git = "https://github.com/aclysma/legion", default-features = false, features = ["serialize"], branch="minimum" }

serde = "1"
uuid = "0.8"
type-uuid = "0.1"
itertools = "0.8"

ron = "0.5"
serde-diff = "0.3"

log="0.4"
env_logger = "0.6"

# Not required, but we'll use it for math in the tutorial
glam = "0.8.6"