[package]
name = "tutorial"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum = { path = "../../minimum" }

atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "minimum-0.3" }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }

legion = { version = "0.3", default-features = false, features = ["serialize"] }

serde = "1"
uuid = "0.8"
type-uuid = "0.1"
itertools = "0.8"

ron = "0.5"
serde-diff = "0.3"

log="0.4"
env_logger = "0.6"

# Not required, but we'll use it for math in the tutorial
glam = "0.8.6"